# talc

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/talc/: Cargo.toml
crates/talc-plot/: Cargo.toml
crates/talc-plot/src/: lib.rs
crates/talc-repl/: Cargo.toml
crates/talc-repl/src/: exec.rs  main.rs  repl.rs
crates/talc-utils/: Cargo.toml
crates/talc-utils/src/: lib.rs  strings.rs
crates/talc/src/: ast.rs  calculus.rs  compute.rs  context.rs  display.rs  eval.rs  lib.rs  linalg.rs  parse.rs  sets.rs  solve.rs  typing.rs
crates/talc/src/ast/: complex.rs  numeric.rs  operators.rs  procedures.rs  substitute.rs
crates/talc/src/calculus/: differentiation.rs  vector.rs
crates/talc/src/context/: default.rs  float_functions.rs
crates/talc/src/eval/: dyadic.rs  error.rs  fold.rs  functions.rs  procedures.rs  relations.rs  unary.rs
scripts/: funcs.talc
src/: ast.rs  context.rs  display.rs  eval.rs  lib.rs  linalg.rs  main.rs  parse.rs  repl.rs  utils.rs
src/ast/: numeric.rs  operators.rs  procedures.rs
src/context/: approximators.rs
src/eval/: dyadic.rs  fold.rs  procedures.rs  unary.rs
