[package]
name = "talc"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Garm <jacobgarm@hotmail.dk>"]
description = "A Computer Algebra System written in Rust"
license = "MIT"
keywords = ["math"]

[dependencies]
bimap = "0.6.3"
itertools = "0.13.0"
lazy-regex = "3.3.0"
malachite = { version = "0.4.16", features = ["floats", "malachite-float"] }
malachite-float = "0.4.16"
ordermap = "0.5.3"
rustyline = { version = "15.0.0", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
codex = {git = "https://github.com/typst/codex.git"}
